validator_derive_tests/tests/compile-fail/no_nested_validations.rs
use validator::Validate;

#[derive(Validate)]
struct Test {
    #[validate(nested)]
    nested: Nested,
}

struct Nested {
    value: String,
}

fn main() {}
